<resources>
    <string name="app_name">Rabbit</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Setting">Setting</string>
    <string name="Register">Register</string>
    <string name="Register_User">USER REGISTER</string>
    <string name="DtPassword">Determine the password</string>
    <string name="phone">Cell phone number</string>
    <string name="Sex">Sex</string>
    <string name="CTS">Connect To Server</string>
    <string name="IP">IP</string>
    <string name="port">PORT</string>
    <string name="connect">Connect</string>
    <string name="interrupt">Interrupt</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="title_home">分类</string>
    <string name="title_dashboard">提醒</string>
    <string name="title_notifications">社区</string>
    <string name="garbage">垃圾分类</string>
</resources>
