<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register_User"
            android:textSize="40sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/user"
            android:hint="@string/Username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:layout_below="@+id/tv_register"/>
        <EditText
            android:id="@+id/et_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/phone"
            android:hint="@string/phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:layout_below="@+id/et_3"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/sex"
            android:hint="@string/Sex"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:layout_below="@id/et_4" />
        <EditText
            android:id="@+id/et_6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/password"
            android:hint="@string/Password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:layout_below="@id/et_5"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/et_7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/dtmpassword"
            android:hint="@string/DtPassword"
            android:paddingLeft="8dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:layout_below="@id/et_6"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_7"
            android:layout_marginTop="46dp"
            android:background="@drawable/btn_login"
            android:text="@string/Register"
            android:textAllCaps="false" />
    </RelativeLayout>
</ScrollView>